# AI-Interview-Tutor-Backend

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.dev-direct.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
analyze-service/: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
analyze-service/src/: config.py  main.py
analyze-service/src/adapters/inbound/: rabbitmq_consumer.py
analyze-service/src/adapters/outbound/: mongo.py  pdf_loader.py  rabbitmq_producer.py
analyze-service/src/agent/: llm.py
analyze-service/src/agent/interfaces/: cv_analyzer.py
analyze-service/src/agent/prompts/: cv_parser.py
analyze-service/src/agent/services/: cv_analyzer.py
analyze-service/src/containers/: agent.py  outbound_adapter.py  use_cases.py
analyze-service/src/data/: skill_synonyms.py
analyze-service/src/domain/errors/: cv_analysis.py
analyze-service/src/domain/models/: cv_analyze_messages.py  pdf_extraction_result.py
analyze-service/src/domain/services/: extraction_quality.py  pdf_validator.py  skill_normalizer.py
analyze-service/src/use_cases/: cv_analyze_use_case.py
analyze-service/tests/: conftest.py
analyze-service/tests/unit_tests/: test_cv_analyze_use_case.py  test_cv_models.py  test_pdf_loader.py  test_pdf_validator.py
analyze-service/tests/unit_tests/adapters/: test_rabbitmq_consumer.py
analyze-service/tests/unit_tests/agent/: test_cv_analyzer.py
infra/: nginx
interview-service/: .env.example  Dockerfile  pyproject.toml
interview-service/src/: config.py  logger.py  main.py
interview-service/src/agent/: llm.py  main.py  workflow.py
interview-service/src/agent/data/: sample_data.py
interview-service/src/agent/prompts/: evaluate_answer.py  generate_report.py  hard_question.py  question_router_decision.py  small_talk.py  soft_question.py  wrap_up.py
interview-service/src/agent/state/: evaluate_answer.py  generate_report.py  greeting.py  hard_question.py  question_router.py  small_talk.py  soft_question.py  wrap_up.py
interview-service/src/agent/utils/: format_messages.py
interview-service/src/api/: exception_handler.py  security.py
interview-service/src/api/dependencies/: auth.py  interview.py  mongo.py
interview-service/src/api/v1/: router.py
interview-service/src/app/: lifespan.py
interview-service/src/domain/exceptions/: cv_not_ready_error.py
interview-service/src/domain/interfaces/: mongo.py
interview-service/src/domain/models/: cv_data.py  interview_state.py  user_profile.py
interview-service/src/domain/value_objects/: conversation_role.py  hard_skill.py  interview_stage.py  language_proficiency.py
interview-service/src/infrastructure/: mongo.py
interview-service/src/infrastructure/postgres/: checkpointer.py  pool.py
interview-service/src/infrastructure/rabbitmq/: __init__.py  interview_completed_producer.py
interview-service/src/infrastructure/redis/: client.py  session_registry.py
interview-service/src/repositories/: interview_session_repository.py
interview-service/src/services/: cv_data_resolver.py
interview-service/src/services/utils/: agent_initial_state.py
interview-service/src/static/: interview_client.html
interview-service/tests/: conftest.py
interview-service/tests/unit_tests/: test_cv_data_resolver.py  test_cv_latest_endpoint.py  test_interview_manager.py  test_scaling_models.py  test_websocket_cv_not_ready.py  test_ws_auth.py
libs/shared_models/: pyproject.toml  setup.py
libs/shared_models/shared_models/: __init__.py
libs/shared_models/shared_models/cv/: __init__.py  cv_data.py  cv_items.py
libs/shared_models/shared_models/interview/: __init__.py  report.py  session.py
libs/shared_models/shared_models/messaging/: __init__.py  common.py  cv_analysis.py  reset_password.py  retry_policy.py
libs/shared_models/shared_models/practice/: __init__.py  attempt.py  exercise.py  messaging.py  plan.py  profile.py
libs/shared_models/tests/: test_messaging.py  test_practice_models.py  test_reset_password.py  test_retry_policy.py
notification-service/: Dockerfile  config.yaml  pyproject.toml
notification-service/src/: config.py  main.py
notification-service/src/adapters/inbound/: rabbitmq_consumer.py
notification-service/src/adapters/outbound/: mongo_repository.py  ses_client.py
notification-service/src/application/mappers/: reset_password_message_mapper.py
notification-service/src/application/use_cases/: reset_password_use_case.py
notification-service/src/containers/: container.py  inbound_adapters.py  outbound_adapters.py  use_cases.py
notification-service/src/domain/entities/: reset_password_message.py
notification-service/src/domain/exceptions/: not_sent_error.py
notification-service/src/models/: reset_password_message.py
notification-service/tests/: conftest.py
notification-service/tests/unit_tests/adapters/: test_rabbitmq_consumer.py  test_ses_client.py
notification-service/tests/unit_tests/use_cases/: test_reset_password_use_case.py
practice-service/: .env.example  Dockerfile  config.yaml  pyproject.toml
practice-service/src/: config.py  logger.py  main.py
practice-service/src/agent/: answer_grader.py  plan_generator.py
practice-service/src/agent/prompts/: templates.py
practice-service/src/api/: security.py
practice-service/src/api/dependencies/: auth.py
practice-service/src/app/: container.py  lifespan.py
practice-service/tests/: conftest.py
practice-service/tests/fixtures/: plan_fixtures.py
practice-service/tests/integration_tests/: conftest.py  test_practice_flow.py
practice-service/tests/unit_tests/: test_answer_grader.py  test_plan_status.py  test_practice_core.py  test_worker_use_cases.py
user-management-service/: .env.example  Dockerfile  Dockerfile.test  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
user-management-service/src/: config.py  lifespan.py  main.py
user-management-service/src/api/: exception_handler.py  security.py
user-management-service/tests/: conftest.py
user-management-service/tests/integration_tests/: conftest.py  test_db.py
(+148 files in other folders)
