[tool.poetry]
name = "src"
version = "0.0.1"
description = ""
authors = ["Aliaksandr Fedaraka <fedorakooo@gmain.com>"]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.27"
langchain-google-genai = "^2.1.9"
langchain-community = "^0.3.27"
pypdf = "^6.0.0"
aioboto3 = "^15.1.0"
types-aiobotocore-s3 = "^2.24.1"
motor = "^3.7.1"
dependency-injector = "^4.48.1"
aio-pika = "^9.5.7"
pydantic-settings = "^2.10.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
