[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Aliaksander Fedaraka fedorakooo@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "dependency-injector (>=4.47.1,<5.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "pymongo (>=4.13.0,<5.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "boto3 (>=1.38.36,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
