[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Aliaksander Fedaraka <fedorakooo@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dependency-injector = "^4.47.1"
aio-pika = "^9.5.7"
pymongo = "^4.13.0"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
boto3 = "^1.38.36"
pyyaml = "^6.0.2"
shared-models = { path = "../libs/shared_models", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
