[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Aliaksandr Fedaraka <fedorakooo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pyjwt = { extras = ["crypto"], version = ">=2.10.1,<3.0.0" }
bcrypt = ">=4.3.0,<5.0.0"
sqlalchemy = ">=2.0.42,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
fastapi = ">=0.116.1,<0.117.0"
alembic = ">=1.16.4,<2.0.0"
pyyaml = ">=6.0.2,<7.0.0"
asyncpg = ">=0.30.0,<0.31.0"
uvicorn = ">=0.35.0,<0.36.0"
pydantic = { extras = ["email"], version = ">=2.11.7,<3.0.0" }
python-multipart = "^0.0.20"
redis = "^6.2.0"
jwt-handler = { path = "../libs/jwt_handler", develop = true }
aio-pika = "^9.5.7"
shared-models = { path = "../libs/shared_models", develop = true }
aioboto3 = "^15.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"
pytest-mock = "^3.15.1"
faker = "^37.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
